Fixed alignment of nav button

--- a/my-developer-portfolio/src/App.css
+++ b/my-developer-portfolio/src/App.css
@@ -87,7 +87,7 @@ body{
   color: white;
   border: none;
   font-size: 25px !important;
-  padding: 8px 20px !important;
+  padding: 8px 10px !important;
   @media (min-width: 540px) {
     display: none ;
   }
